# mintlemon-turkish-nlp

./: .gitignore  AUTHORS.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
docs/: req.txt  requirements.txt
docs/source/: conf.py  index.rst  requirements.txt
docs/source/_getting_started/: installation.rst
docs/source/_module/: normalizer.rst  normalizer.text_to_root_dtm_vec.rst  sentence_splitter.rst
example/normalizer/: Convert_Numbers_to_Turkish_Text.ipynb  Convert_Text_Numbers.ipynb  Normalize_Turkish_Chars.ipynb  Remove_Numerical_Expressions.ipynb  Remove_Stopwords.ipynb  Removing_Accent_Marks.ipynb  Removing_Punctuations.ipynb  Text_Root_DTM_Vectorization.ipynb  Turkish_Text_Deasciification.ipynb  Turkish_Text_Lowercasing.ipynb
example/sentence_splitter/: Sentence_Splitter.ipynb
example/turkish_spellcheck/: Turkish_Spell_Check_Wizard.ipynb
examples/normalizer/: TextRootDTMVectorizer.ipynb  normalization_methods.ipynb
examples/sentence_splitter/: split_sentences_method.ipynb
mintlemon/: __init__.py
mintlemon/data/: TR_non_breaking_prefixes.txt  stop_words.txt
mintlemon/normalizer/: __init__.py  _builtin.py  normalizer.py  text_to_root_dtm.py
mintlemon/sentence_splitter/: __init__.py  sentence_splitter.py
mintlemon/turkish_spellcheck/: __init__.py  turkish_spellchecker.py
tests/: test_normalizer.py  test_sentence_splitter.py
